# cover-thumbnailer

./: .bzrignore  .gitignore  COPYING  Makefile  README.md  RELEASE.rst  cover-thumbnailer-gui.py  cover-thumbnailer.py  install.sh  pyproject.toml
cover-thumbnailer/: README  cover-thumbnailer-gui.py  cover-thumbnailer.py  install  install.sh
cover-thumbnailer/freedesktop/: cover-thumbnailer-gui.desktop  cover.thumbnailer
cover-thumbnailer/locale/: ar.po  ca.po  cover-thumbnailer-gui.pot  cs.po  da.po  de.po  el.po  en_GB.po  es.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  ja.po  ko.po  ms.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
cover-thumbnailer/man/: cover-thumbnailer-gui.1  cover-thumbnailer.1
cover-thumbnailer/share/: cover-thumbnailer-gui.glade
current/: README  cover-thumbnailer-gui.py  cover-thumbnailer.py  install  install.sh
current/locale/: ca.po  cover-thumbnailer-gui.pot  cs.po  da.po  de.po  en_GB.po  es.po  fr.po  gl.po  it.po  pl.po  pt.po  ro.po  ru.po  sk.po  tr.po
current/man/: cover-thumbnailer-gui.1  cover-thumbnailer.1
locale/: ar.po  ca.po  cover-thumbnailer-gui.pot  cs.po  da.po  de.po  el.po  en_GB.po  es.po  eu.po  fr.po  gl.po  he.po  hr.po  hu.po  it.po  ja.po  ko.po  ms.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
man/: cover-thumbnailer-gui.1  cover-thumbnailer.1
share/: cover-thumbnailer-gui.glade
v0.6/: COPYING  README  cover-thumbnailer-gui.py
v0.7/: cover-thumbnailer.py  install.sh
(+10 files in other folders)
