[project]
name = "cover-thumbnailer"
version = "0.10.1"
description = "directory cover thumbnailer for GTK based file viewers"
authors = ["Fabien Loison <http://www.flozz.fr/>"]
readme = "README.md"
license = "GPL-3.0"
classifiers = [
    "Development Status :: 6 - Mature",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Topic :: System",
    "Programming Language :: Python :: 3.8",
]

requires-python = ">=3.8"
dependencies = ["pillow>=10.0"]
